[tool.poetry]
name = "repl_python3_so-much-to-see-at-OpenSea"
version = "0.1.0"
description = ""
authors = ["AceVentura7 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
selenium = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
